larger numbers to read across from the room at 1024x768

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ a:link, a:visited { color:#8a83ff; }
 div  {color:#aaa;}
 h1 	 { font-family: 'Yatra One', cursive; text-align:center; font-weight:normal;}
 
-#remaining_time {font-size: 60px; font-family: 'Lato', sans-serif; color: #fff; text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080; font-variant: small-caps; } 
+#remaining_time {font-size: 160px; font-family: 'Lato', sans-serif; color: #fff; text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff0080, 0 0 30px #ff0080, 0 0 40px #ff0080, 0 0 55px #ff0080, 0 0 75px #ff0080; font-variant: small-caps; } 
 #clock { font-family: 'Lato', sans-serif; text-align:center; }
 #name { font-variant:small-caps; }
 #period { font-variant:small-caps; }
-#counter { font-family: 'Lato', sans-serif; font-size: 3em; }
+#counter { font-family: 'Lato', sans-serif; font-size: 6em; }
 .center-text { text-align: center; }
 .panel {float:left; height:22rem;}
 
@@ -59,7 +59,7 @@ button:active {transform: scale(0.99); }
 
 	<div class="panel" style="width:70%;">
 
-		<div style="position:relative; top:20%;">
+		<div style="position:relative; top:10%;">
 	    <div style="text-align: center; font-size: 4em;">
 	      <span id="remaining_time">&nbsp;</span>
 	    </div>
@@ -142,7 +142,7 @@ button:active {transform: scale(0.99); }
 <script type="text/javascript">
 <!--
 countdown_timer = null;
-schedule_type   = "MS";   // SET TO MS OR HS
+schedule_type   = "HS";   // SET TO MS OR HS
 timer_minutes   = 0;
 
 
