--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
   </head>
   <body>
     <div id="root"></div>
-    <p><small>Revised 2018-08-11 &copy;2018 <a href="https://www.dynawebworks.com">dynaWEBworks</a></small></p>
+    <div class="clearfix">
+    <div id="footer">
+      Revised 2018-08-11 &copy;2018 <a class="logo" href="https://www.dynawebworks.com">dyna<span class="logo-highlight">web</span>works</a>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
