updating wip to new block schedule for 2021

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@ button:active {transform: scale(0.99); }
 	<div class="panel" style="width:70%;height:100%;">
     <div style="text-align: center; font-size: 1.5em;">
       <button onClick="setSchedule('default')", type="button">default</button> 
-      <button onClick="setSchedule('RallyA')", 	type="button">rally a</button> 
-      <button onClick="setSchedule('RallyB')", 	type="button">rally b</button> 
-      <button onClick="setSchedule('Block')", 	type="button">block</button> 
+      <button onClick="setSchedule('Rally')", 	type="button">rally a</button> 
       <button onClick="setSchedule('Finals')", 	type="button">finals</button> 
       <button onClick="setSchedule('Minimum')", type="button">minimum</button> 
       <button onClick="setSchedule('Test')", 		type="button">test</button> 
