forgot to add file

--- a/index.html
+++ b/index.html
@@ -76,16 +76,18 @@ button:active {transform: scale(0.99); }
 		<div style="font-size: 1.25em; font-variant: small-caps; color:#666">CURRENT TIME  <span id="clock">&nbsp;</span></div> 
 		<br>
 		<br>
-		<div style="font-size: 1.25em; font-variant: small-caps; color:#666">SETTINGS:</div> 
-		     
-		<div>
-		  <input type="radio" id="contactChoice1"
-		   onClick="setScheduleType('MS')", name="contact" value="MS">
-		  <label for="contactChoice1">Middle School</label>
+    
+    <div style="visibility: hidden">
+  		<div style="font-size: 1.25em; font-variant: small-caps; color:#666">SETTINGS:</div> 
+  		<div>
+  		  <input type="radio" id="contactChoice1"
+  		   onClick="setScheduleType('MS')", name="contact" value="MS">
+  		  <label for="contactChoice1">Middle School</label>
 
-		  <input type="radio" id="contactChoice2"
-		   onClick="setScheduleType('HS')", name="contact" value="HS" checked>
-		  <label for="contactChoice2">High School</label>
+  		  <input type="radio" id="contactChoice2"
+  		   onClick="setScheduleType('HS')", name="contact" value="HS" checked>
+  		  <label for="contactChoice2">High School</label>
+      </div>
 		</div>
 
 		<br/>
@@ -128,7 +130,7 @@ button:active {transform: scale(0.99); }
 <br/>
 
 <hr/>
-<p><small>Revised 2018-08-11 &copy;2018 <a href="https://www.dynawebworks.com">dynaWEBworks</a></small></p>
+<p><small>Revised 2021-07-13 &copy;2018-2021 <a href="https://www.dynawebworks.com">dynaWEBworks</a></small></p>
 
 </body>
 </html>
